src-tauri/check_output.txt
    Checking neodb v0.1.0 (/home/alan/Project/tauri-app/src-tauri)
warning: use of deprecated method `redis::Client::get_async_connection`: aio::Connection is deprecated. Use client::get_multiplexed_async_connection instead.
  --> src/redis_manager.rs:75:26
   |
75 |     let mut con = client.get_async_connection().await
   |                          ^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

error[E0599]: no variant or associated item named `Bulk` found for enum `redis::Value` in the current scope
  --> src/redis_manager.rs:91:23
   |
91 |         redis::Value::Bulk(items) => {
   |                       ^^^^ variant or associated item not found in `redis::Value`

error[E0599]: no variant or associated item named `Status` found for enum `redis::Value` in the current scope
  --> src/redis_manager.rs:97:23
   |
97 |         redis::Value::Status(s) => Value::String(s),
   |                       ^^^^^^ variant or associated item not found in `redis::Value`

error[E0599]: no variant or associated item named `Bulk` found for enum `redis::Value` in the current scope
   --> src/redis_manager.rs:113:23
    |
113 |         redis::Value::Bulk(items) => {
    |                       ^^^^ variant or associated item not found in `redis::Value`

error[E0599]: no variant or associated item named `Status` found for enum `redis::Value` in the current scope
   --> src/redis_manager.rs:117:23
    |
117 |         redis::Value::Status(s) => Value::String(s),
    |                       ^^^^^^ variant or associated item not found in `redis::Value`

error[E0277]: the trait bound `&tauri::State<'_, DbState>: CommandArg<'_, tauri_runtime_wry::Wry<EventLoopMessage>>` is not satisfied
  --> src/redis_manager.rs:66:1
   |
66 |   #[command]
   |   ^^^^^^^^^^ the trait `Deserialize<'_>` is not implemented for `&tauri::State<'_, DbState>`
   |
  ::: src/lib.rs:42:25
   |
42 |           .invoke_handler(tauri::generate_handler![
   |  _________________________-
43 | |             greet,
44 | |             create_connection,
45 | |             get_all_connections,
...  |
50 | |             execute_redis_command
51 | |         ])
   | |_________- in this macro invocation
   |
   = help: the following other types implement trait `Deserialize<'de>`:
             `&'a JsonRawValue` implements `Deserialize<'de>`
             `&'a [u8]` implements `Deserialize<'de>`
             `&'a std::path::Path` implements `Deserialize<'de>`
             `&'a str` implements `Deserialize<'de>`
             `&'p jsonptr::pointer::Pointer` implements `Deserialize<'de>`
             `()` implements `Deserialize<'de>`
             `(T,)` implements `Deserialize<'de>`
             `(T0, T1)` implements `Deserialize<'de>`
           and 588 others
   = note: required for `&tauri::State<'_, DbState>` to implement `CommandArg<'_, tauri_runtime_wry::Wry<EventLoopMessage>>`
   = note: this error originates in the macro `__cmd__execute_redis_command` which comes from the expansion of the macro `tauri::generate_handler` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused import: `redis::Commands`
 --> src/redis_manager.rs:4:5
  |
4 | use redis::Commands;
  |     ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

Some errors have detailed explanations: E0277, E0599.
For more information about an error, try `rustc --explain E0277`.
warning: `neodb` (lib) generated 2 warnings
error: could not compile `neodb` (lib) due to 5 previous errors; 2 warnings emitted
